gts-macros/tests/compile_fail/instance_id_prefix_mismatch.stderr
error[E0080]: evaluation panicked: instance id literal must equal the type's GtsSchema::TYPE_ID followed by a single non-empty segment (no extra `~`); for chained schemas, write the full type as a turbofish on the struct literal (e.g. `BaseV1::<LeafV1>` rather than bare `BaseV1`) so the macro can derive the conforming schema
  --> tests/compile_fail/instance_id_prefix_mismatch.rs:25:13
   |
25 |       let _ = gts_instance!(PermV1 {
   |  _____________^
26 | |         id: "gts.zzz.core.other.thing.v1~vendor.app.test.x.v1",
27 | |         action: "read".to_owned(),
28 | |     });
   | |______^ evaluation of `main::_` failed here
